Mon Mar 28 07:50:45 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ASNMP/asnmp/vb.cpp:
        * ASNMP/examples/get/get_async.cpp:
        * ASNMP/tests/Gauge_Test.cpp:
        * apps/Gateway/Gateway/gatewayd.cpp:
        * apps/Gateway/Peer/peerd.cpp:
        * apps/JAWS/clients/Blobby/blobby.cpp:
        * apps/JAWS2/JAWS/IO_Handler.h:
        * apps/JAWS2/JAWS/IO_Handler.cpp:
        * apps/JAWS2/JAWS/Jaws_IO.h:
        * apps/drwho/Hash_Table.h:
        * protocols/tests/HTBP/Send_Recv_Tests/client.cpp:
        * protocols/tests/HTBP/Send_Recv_Tests/server.cpp:
          Fuzz fixes

Mon Mar 28 07:41:37 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Extended to check for old documentation style

          Converted to doxygen
        * ASNMP/agent/agent_impl.h:
        * ASNMP/agent/snmp_agent.h:

        * ASNMP/asnmp/address.cpp:
        * ASNMP/asnmp/asn1.cpp:
        * ASNMP/asnmp/counter.cpp:
        * ASNMP/asnmp/ctr64.cpp:
        * ASNMP/asnmp/gauge.cpp:
        * ASNMP/asnmp/integer.cpp:
        * ASNMP/asnmp/octet.cpp:
        * ASNMP/asnmp/oid.cpp:
        * ASNMP/asnmp/pdu.cpp:
        * ASNMP/asnmp/sagent.cpp:
        * ASNMP/asnmp/snmp.cpp:
        * ASNMP/asnmp/target.cpp:
        * ASNMP/asnmp/timetick.cpp:
        * ASNMP/asnmp/transaction.cpp:
        * ASNMP/asnmp/vb.cpp:
        * ASNMP/asnmp/wpdu.cpp:

        * ASNMP/examples/get/get.cpp:
        * ASNMP/examples/get/get_async.cpp:

        * ASNMP/examples/next/next.cpp:

        * ASNMP/examples/set/set.cpp:

        * ASNMP/examples/trap/trap.cpp:

        * ASNMP/examples/walk/walk.cpp:

        * ASNMP/tests/Address_Test.cpp:
        * ASNMP/tests/Counter64_Test.cpp:
        * ASNMP/tests/Counter_Test.cpp:
        * ASNMP/tests/Gauge_Test.cpp:
        * ASNMP/tests/Integer_Test.cpp:
        * ASNMP/tests/Octet_Test.cpp:
        * ASNMP/tests/Oid_Test.cpp:
        * ASNMP/tests/Target_Test.cpp:
        * ASNMP/tests/Varbind_Test.cpp: